# logos-svc

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: pipeline-stg.yaml  pipeline.yaml
app/: character.py  generator.py  livecoder.py  main.py  models.py  mongo.py  server.py  utils.py
app/animations/: __init__.py  animation.py  comic.py  dialogue.py  little_martians.py  monologue.py  reel.py  story.py
app/creation_interfaces/: __init__.py  kojii_chebel.py  kojii_huemin.py  kojii_makeitrad.py  kojii_untitledxyz.py  kojii_violetforest.py
app/llm/: chatgpt.py  llm.py  models.py  openrouter.py  session.py
app/models/: __init__.py  characters.py  creator.py  little_martians.py  livecode.py  scenarios.py  tasks.py
app/plugins/: eden.py  elevenlabs.py  replicate.py  s3.py
app/prompt_templates/: __init__.py  cinematographer.txt  dialogue.txt  director.txt  identity.txt  moderation.txt  monologue.txt  qa.txt  summary.txt
app/prompt_templates/assistant/: __init__.py  chat.txt  creator.txt  identity.txt  livecoder_prompt.txt  livecoder_system.txt  qa.txt  reply.txt  router.txt  story_context_prompt.txt  story_context_system.txt  story_editor_prompt.txt  story_editor_system.txt
app/prompt_templates/cinema/: __init__.py  cinematographer.txt  director.txt  reelwriter_prompt.txt  reelwriter_system.txt  screenwriter.txt  (+2 more)
app/routers/: chat.py  dags.py  generator.py  scenario.py  story.py  summary.py  tasks.py
app/scenarios/: __init__.py  chat.py  chat_monitor.py  dialogue.py  eden_assistant.py  livecode.py  monologue.py  qa.py  reel.py  story.py  tasks.py
logos/: character.py  livecoder.py
logos/animations/: __init__.py  dialogue.py  little_martians.py  reel.py  story.py
logos/creation_interfaces/: kojii_chebel.py  kojii_huemin.py  kojii_makeitrad.py  kojii_untitledxyz.py  kojii_violetforest.py
logos/llm/: llm.py  session.py
logos/models/: __init__.py  livecode.py  scenarios.py
logos/plugins/: elevenlabs.py  replicate.py  s3.py
logos/prompt_templates/: __init__.py  identity.txt  moderation.txt  monologue.txt  summary.txt
logos/scenarios/: __init__.py  chat.py  monologue.py  reel.py  story.py
scripts/: moderation.py
src/: models.py  server.py  utils.py
src/llm/: __init__.py  llm.py
src/logos_svc/: server.py
src/prompt_templates/: dialogue.txt  identity.txt  screenwriter.txt
src/scenarios/: __init__.py  dialogue.py  eden_assistant.py  story.py
tests/: test.py  test_animation.py  test_chat.py  test_chat_monitor.py  test_comic.py  test_creation_interfaces.py  test_dags.py  test_dialogue.py  test_eden_assistant.py  test_generator.py  test_littlemartians.py  test_livecoder.py  test_main.py  test_monologue.py  test_providers.py  test_qa.py  test_scenarios.py  test_server.py  test_stories.py  test_story.py  test_summary.py  test_tasks.py
(+38 files in other folders)
