[project]
name = "logos-svc"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Jonathan Miller", email = "jon@jmill.dev" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
    "pydantic>=2.5.2",
    "eden-logos @ git+https://github.com/edenartlab/logos",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.5.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "pytest>=7.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]