[project]
name = "logos-svc"
version = "0.1.0"
description = "Logos"
authors = [
    { name = "Eden", email = "gene@eden.art" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
    "pydantic>=2.5.2",
    "python-dotenv>=1.0.0",
    "fire>=0.3.0",
    "httpx>=0.24.1",
    "orjson>=3.9.0",
    "rich>=13.4.1",
    "python-dateutil>=2.8.2",
    "pymongo>=3.12.0",
    "elevenlabs>=0.2.27",
    "boto3>=1.34.9",
    "replicate>=0.22.0",
    "moviepy>=1.0.3",
    "eden_sdk @ git+https://github.com/edenartlab/eden-sdk-py.git",
    "transformers>=4.37.2",
    "pydub>=0.25.1",
]

readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.5.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "pytest>=7.4.3",
]

[tool.hatch.metadata]
name = "logos-svc"
version = "0.1.0"
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["logos"]
